welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:6: error: not found: value ecrireMessage
    do{compteur=compteur+1;colonne=colonne+1;setPos(colonne,ligne);ecrireMessage(compteur)} while (!(colonne==getMondeHauteur()))
                                                                   ^ZigZag:9: error: not found: value ecrireMessage
    ecrireMessage(compteur);
    ^ZigZag:10: error: not found: value ecrireMessage
    do{compteur=compteur+1;colonne=colonne-1;setPos(colonne,ligne);ecrireMessage(compteur)} while (!(colonne==0))
                                                                   ^ZigZag:13: error: not found: value ecrireMessage
    ecrireMessage(compteur);
    ^